[package]
name = "deathbattle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deathbattle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["metadata"]}
solana-program = "1.17.12"
arrayref = "0.3.7"
strum = "0.25"
strum_macros = "0.25"